# libindexfn-indexers

./: Cargo.toml
src/: fulltext.rs  lib.rs
